# logicopilot

./: .gitignore  Logicopilot_Implementation_Plan.docx  Logicopilot_Implementation_Plan_Assigned.docx  README.md  implementation_plan.docx  workbooster_architecture_and_guide.docx  workbooster_product_overview.docx  workbooster_user_guidebook.docx
backend/: .env.example  .gitignore  README.md  drop_tables.py  pyproject.toml  requirements.txt  run.ps1  seed_db.py
backend/alembic/: env.py
backend/alembic/versions/: 0440f8ea51ed_create_tenants_users_refresh_tokens.py  0cdc0bd7a99c_erp_access_requests.py  38548defeddb_template_reviews_inbox_tenant_format_.py  5c6e442d2d5f_onboarding_template_groups_documents_.py  c24dd962d7ae_jobs_job_job_documents_job_field_values.py  df858fdb7fce_job_accepted_verifications.py  f3721654e597_user_template_assignments.py
backend/app/: cli.py  main.py
backend/app/api/v1/: __init__.py  auth.py  field_marks.py  jobs.py  reviews.py  template_documents.py  template_groups.py  tenants.py  users.py
backend/app/core/: anchors.py  config.py  database.py  deps.py  docai.py  extraction.py  llm.py  security.py
backend/app/db/: base.py
backend/app/models/: cross_doc_link.py  erp_access.py  field_mark.py  job.py  mixins.py  refresh_token.py  template_document.py  template_group.py  template_review.py  tenant.py  user.py  user_template.py
backend/app/schemas/: auth.py  jobs.py  onboarding.py  tenant.py  user.py
backend/tests/: conftest.py  test_auth.py  test_rbac.py  test_tenant_isolation.py
backend/uploads/templates/1/ocr/: page_1.json
(+105 files in other folders)
